# ChangeLog for dev-perl/Perl-Critic-Deprecated
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic-Deprecated/ChangeLog,v 1.5 2012/12/22 18:25:32 ago Exp $

  22 Dec 2012; Agostino Sarubbo <ago@gentoo.org>
  Perl-Critic-Deprecated-1.108.0.ebuild:
  Add ~ppc, wrt bug #429088

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org>
  -Perl-Critic-Deprecated-1.108.ebuild:
  Cleanup

*Perl-Critic-Deprecated-1.108.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org>
  +Perl-Critic-Deprecated-1.108.0.ebuild:
  Change version scheme

*Perl-Critic-Deprecated-1.108 (30 Jan 2011)

  30 Jan 2011; Christian Ruppert <idl0r@gentoo.org>
  +Perl-Critic-Deprecated-1.108.ebuild, +metadata.xml:
  Initial commit for dev-perl/Perl-Critic-Deprecated