@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Perl-Critic-Deprecated-1.108.tar.gz 15074 SHA256 24beef4270a40887cd1b4e080c83553a3eddfd34702c454da5adbe27b14625df SHA512 6751f2c39976dbc66c7b1b5fa5c2612b53004567dad6a4e8b7f85416363324d354198e8130609892c4a7f3e96e823e93dd91080133b43079e4b10f19346b845e WHIRLPOOL c39efdc4b1cd9d3b9e56bd6805a8f34649a468dc7238cc70aaf4331ee3c305589ab0876681a865496f0a54e141af9bf0095f03e5f9f0b24d28342e811ea0a313
-EBUILD Perl-Critic-Deprecated-1.108.0.ebuild 584 SHA256 91e42d1f7ff2169c4c7b1d9c064a2be592ff4a98663971e28d807c63c1439d17 SHA512 a295d93f20e727de5d7a77b805998c8e540a164f3343e7ae1a45e146be755013ebaab64aa431864a371db9440fc914d95d87d6ec2428f0acfa817871bbce1d31 WHIRLPOOL 52fad619ad4ef29280457517b9f972d681aa7df9b0583d91b550acc300a8b2df3c6851acd9b364fff5c74514b815df7bf8c56a7baf25bda291cfa5e606573d63
-MISC ChangeLog 908 SHA256 c84a2d548e196abe0827ff3a81ec5245419d9b2e727fe0408c031723e7eb3e08 SHA512 4edc1f37f5e983d9b89590d2c7fcdafad78c5328c6906cd37529e413a3229af6de08c00c5bae0d0165fb39efe5ea7473242004f76215634e45002d438765120b WHIRLPOOL 83dd7c33c85b07c1f6b010c75a6d6ce037de7b3f0d750afce00a7c97ffea83429f000e2ebada083827c2325e074f632a09e785c57329e359d6702637b492b811
+EBUILD Perl-Critic-Deprecated-1.108.0.ebuild 543 SHA256 6988ce7185db71e43c9b38bce8f4a58b297fc6381eadd5034dec74143408586e SHA512 3b8d38d9feb0dce368d71301d00401aeb449df34ea41ceee5c6cdb5a7b1632bb79fa1bdacb7e17793ca112db59f8be1f049214594df9673b68dcc48cb35a389c WHIRLPOOL 82082d07512339d13ea1062c9d36d5409ebf91454d12ed0eab17ffbcdc255a3564da081901ca26a2bae6d32333ceea217c6a6d6b59cc374f7113ed030ed5128f
+MISC ChangeLog 1048 SHA256 d26bb52e0a05f800498bcc2b18fafc79336d2759bd1283c207f9a414a20cd982 SHA512 e9cdc45cd67c7dce955e89ecb1fbf4de7f46e1a73e39459af9112963f3271ddfe5ebcdd3b896cea0699e86df2d375815967d7b6da4fa61d5caf24e82e37b9530 WHIRLPOOL 91f360936b93a59624b5da7b150865b2900f0ae63028f84c3e77e83a775df369e7d4d45d3b8ea3de7b4360aa9f31a9dfbc7f628e6f6c51d8caa76da56de4979e
 MISC metadata.xml 601 SHA256 bfff8294e8140c0f21d7a2f57c2b81c410759eda6d6d997e5b408da2c84c93e0 SHA512 16495e26038e4bfe5e6bdbe53f22fd0ed900350318db76f3ad9ce22bf544ac75320c0389b1b88e388d73f361166d193693154809ad8e44dfee3bea41006ba3bc WHIRLPOOL 2bec9b720638ae2903bc0827a44da06282cbe35d24dd8b53d6cc504ef06c495e83b743e91f9da98bbd4e5247fbf957d5c8ba1905f2f25411721cc1f908e61013
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlMqtIwACgkQG9wOWsQutdaGewP/c8H+CTRW/chsGdXB2C8cxZSv
+GHnYOlGeWx7ZlHfEltuc7efgqQpRfjZU1TgW/gdN0NBsIHTisp74IdeWqtfup17i
+CH4p5rwEDSuHIYLPRGLy/y+i7YeHIHNAsTpuPHgqM2DHMxMXTKl3rjMq+cJH2XeY
+gZLh+r9BQ0NixYZxOes=
+=dcB0
+-----END PGP SIGNATURE-----
