@@ -1,29 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX rapidsvn-0.12.1-locale.patch 834 SHA256 3cb9dd7e95d4d8dc5fd8fa7c36961225b0a5e1f146fc529130eb2e15fc5e3279 SHA512 0901b3242edffb128152b9db9982ad446098cc1f21a3b9e41aa8db3217353e8e691091637e609ddf32f23cedbc9007856d900eb53152d34010b1f1b01afbf508 WHIRLPOOL 206b0177d632cea34b3c435fd60e2dd901d58738ebcd4a090d7b46817b850cb2ed21bd32836bc9dda6c0d4f23b1ad21438cc6d620f2f9f90ce94096c50ac6ad7
 AUX rapidsvn-0.12.1-svncpp_link.patch 304 SHA256 99a4690987be6f39400a737ca12762495621fc2789fed18c5d9903a8d87ae968 SHA512 305c5c64802f6a29324d385e809a6c6e848b17b1608362e481fa49c56955b15007b2b06cd396126ceb0bac131be29b97e825b33e141cbbb508423f9f231fb1bb WHIRLPOOL 77456d29edb182156820384a5065adece4bb04546045a2ed86ffcea95176fcf5f5f43d95303695bb24d7d001860752528ea1eed64315eae05c1ea8223c789028
 AUX rapidsvn-svncpp_link.patch 304 SHA256 99a4690987be6f39400a737ca12762495621fc2789fed18c5d9903a8d87ae968 SHA512 305c5c64802f6a29324d385e809a6c6e848b17b1608362e481fa49c56955b15007b2b06cd396126ceb0bac131be29b97e825b33e141cbbb508423f9f231fb1bb WHIRLPOOL 77456d29edb182156820384a5065adece4bb04546045a2ed86ffcea95176fcf5f5f43d95303695bb24d7d001860752528ea1eed64315eae05c1ea8223c789028
 DIST rapidsvn-0.12.1.tar.gz 1087511 SHA256 9744d2481b7e4db52adb0fa03806776463ed239ad39d09c807bc4c1198c4acae SHA512 892dab56e8ec19c5f26a0ddfab378187bc0325275f9fcf759c12beead70aab17876f7e5920bcf214fc86354faef58244ce25926ba010158f7354cd144e1c4c07 WHIRLPOOL c59205df79ef202bb448458afe7fd887d361a0fc33eb462cf4d92a3ec675ddda793b980201f89f415226053e89329cd081b2112fab2b6724d51e4697e5afe5ea
 DIST svncpp.dox.xz 1684 SHA256 d07a9f7fef3383d42d1f3f0a504a274942e080956dcb0233aa40a6564b23e530 SHA512 6314632b2f6a0f21bdd4644f856c8d60951c30135a82e509a7f929908dacb56462a2fa768c2e45cd7baf99face50fa5d4592a0691cfa1f16335bf64892933589 WHIRLPOOL ff55131f97d909eefedd5535885523c0ad70ea8263802c3fef187b62130fcfe4dd5c4bab3e8330ff83df3ba63e2d1bb1d5745244c56597805a6a8f748df18912
-EBUILD rapidsvn-0.12.1-r1.ebuild 2809 SHA256 eb0928cfce7f390742ad018c861e194cb0c9ffda34f2dc0f1f399005732a7eeb SHA512 5436e3b7a376c44fbf882584437925aabbfa08356c633cc401480a08eef7be25a43f644c30e6ccd815c40dcb724778a82fe454970da11f9681c5540775458404 WHIRLPOOL f25534d9174f366b9b6e5df18f64ab43825cba6b710ff3918e61eb1e8003b5cf2ab3329a452889a4c84be1c0e7dc4fbb07b6a69e62da6f3d4beed2aabf01161b
+EBUILD rapidsvn-0.12.1-r1.ebuild 2824 SHA256 2ae12a2f18c9731065ad56a1af9a7be2994c83d07b34705f75d69a2be036d7d6 SHA512 44b4954569972074981d1b1ac273cdfb3d457d17f68f06d3e3c6b241c6aeac2456aa2b7ad6813e51f099b80b13ab90b15d498233fd81f5f0f72725c8fcaecf09 WHIRLPOOL 40bd57981b189280af0fa803b86f4638b7dc9d23e12a29fc38df2f0ef9a953304b57fcc70b5069a45cccc5161896c8e132178e3cb659aca0d7415c8c21bd1277
 EBUILD rapidsvn-0.12.1.ebuild 2699 SHA256 5e919498c52c41e43c7f6495b73fa0f607971ac1714c6eb6298f5994d3682e44 SHA512 fe2392b3ffd593a987df9401a17d46841a13f176b6077d8993dbb4be8e1a76972eb7179eecd3868bf8da35ee5fd4daefe5a7eb77c081e410933b0db75ab0291f WHIRLPOOL d20e896bfcb236aaa14e96ae2ea7e0c7b6e5fb7a2a6b954b2f3673f7a705beaca18dea533be2c58b70184e09230bcc3588c08fcfb769e7f97e8da5ec3028b8c1
-MISC ChangeLog 15712 SHA256 3807f423cfe642a58f4f5ba878f82c2267ab97557be9e90a970964f31fd90275 SHA512 ff34daacd1a6b3b99a113caae11cea50f38014473fa8bf23fa67f424e69bbdbf7988ee2b6271f6bb730d248849d6437afa1e316da9b4b2d68c80766ec6de94bc WHIRLPOOL bbe44677a4c83a5a2399bae5f094ff24ad1f3fb3137725eb7087674993417be800047013193f96a1f05c11beddec6c3b6669d37ffc5a51a8612755193efe7934
+MISC ChangeLog 15825 SHA256 fe7b32c81d201e6232ebb181c1bc95baf0fde16673910abc842b4f9313d91c68 SHA512 28c4263862a9903aa547baf4d80dc2092c8d83500f73a3ef603a76c564f970e343d464d1752509761fa3a8db3b307adb2935e11b36e6af55c21421054d7e9ca0 WHIRLPOOL 4bc5cd465d6819e3a3ab74e198c5c17a03c6f9713ee2bceae1a9786b547b3b4f73dd48c659c082793023581531fac0bf2c715453a7faba8bb39b2e818ff75e5d
 MISC metadata.xml 480 SHA256 a76153a08edc68c3849ee2eb56c8e9d2bdc79e1d1ee54f05541252fba1ac9122 SHA512 f82b89f8f5a60467fb063ab4e6b83566958e516051b982ece368c422363acce8b57accc173090a84f75ec173e2c552706145e5a2776f554be6684168f74345a4 WHIRLPOOL 455d5385513fa34dd37ffa5bc936fb072a695de3cfb4aee94f9bcf54e86ddacff902dc0b782eeaf3ea99298d08010bce009bf414d166b923c0755f80d0337169
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTHErgAAoJEE8aJVXqcZkdzz8P/RyE7Wyb1ib7dx9yfaSftCL1
-XMTTwsJ6DY0P2uTagYB7T70dYVAp/vrWx/njWwwH9pPCq6rlYPAE10ktgVboAPjM
-T8+KcuO0xmDxkj0HmrDuLxiiow6N7i7yAo1zID0RwznzWMVR06uyrBTkAnXy2WtS
-sQAyOtr94OKw9I+0/1TjeWqp11AydID/a+v+r7sBAU6WOiu8K0XomMx2n9lFdduE
-2gWk44yUVDLU5vX8XrzLcsPUxL6kYA6kqtz5eGGrm7ZBJfrKcWpBH0lWFpuYw9bS
-YlLNoTPndrR9BziggydastsG5aHDpllD5TpbgOlBWQSRb4h4hxx2rb71v+aMx1a/
-ZHtby2euMwPUpXN5+Lldo6rLIG/XLkfoQ8EdGTJs+vhPboAAfs5UPyfp7uMtNP5I
-pmhPMYLwJWm7Bsug6+Wt5OawbDhsIv9e8htIivixfBKmt1BUfFh+hIasyBm8//LH
-L4cHBMpQ9lZWvTm3LpvMiQIqPBpX+lKVSEkDCeQWJomZhq/lC4OENQg1Wva7LAbi
-PQ8IVRp8Y88vF7vqwCaCOyH8hQLy8BCb+K1ST2Z96UL4iLnrZlPFRTCIw+ygzHxj
-pp7vz1KEMiL1OdfHVzSQhRfbG3fW8qZOqOEvoFzK+RmVwp2HdML+4vquF9BdMjqN
-2+tvsW6VXqF2FruJHxcR
-=qRZw
+iQJ8BAEBCgBmBQJTKrB7XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirQBsQAIe7f2GJn6ma1V4PdieGiLiM
+743TDoV/ODIcTAi6AiWbzopPEyuRk/IiU5Wj9+Zm7nUu+rJUgNjhKIoPQemlW/Bf
+U3zxJeCSQj/ZvpsD0apu/SaC59yrj2WkXaVUxX/YayHs4oshQahcJo0sg3y6TldM
+RbT2UmS42LPoCOE7J5BYy/vbx19PCq4Q5ylrfCk1rBsVCQrphgsnA4LE/0CA0/B0
+x+cdG14kljdOoKmKaDW82lUyCjsxEbqeMI3fbQPfDBlCuGpx/ayDY8KWrECI8UEC
+nymOcYcWnJayCVdOsAmb/2qL+UamCj9S9Xk4M+IP0JC369sGVc6w4Jvde/51ELyM
+r7kFeKg4KIBuyx/WmdfjzZbiS/yPlHSXKlu8uXhyDrOmtJ1rxs4S1MJj9nxY0OuD
+3rr6BzchlEbzFsyqAN0h8gSj2ZeSZpdxHP9Y/YUtF1mmHK5vWxO4pFJ3TaRWpHR8
+f8BYaj4ocHA/gFm21O08nogTpad6UzRX4Frv0qot09cptA+qVBju/Lw49lCAX3Su
+bKnGUZlo8ovsWm+YQycNpJhfKRfgT/6IbvV4XDAQRjzlFKWIuQc/CTYu23d2g+Vq
+P4+ALWLrK87J23cXsSWEAgcoOHo1dhdXQ+ODG1qlkJL2zuz5tcuSK8ZOUolk7fME
+UxyqjtoYbMVd8IyRh0OH
+=/Xms
 -----END PGP SIGNATURE-----
