@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/rapidsvn-0.12.1-r1.ebuild,v 1.2 2014/03/12 05:06:43 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/rapidsvn/rapidsvn-0.12.1-r1.ebuild,v 1.3 2014/03/20 09:10:18 jlec Exp $
 
 EAPI=5
 
@@ -39,7 +39,9 @@ DEPEND="${COMMON_DEP}
 		dev-libs/libxslt
 		app-text/docbook-sgml-utils
 		app-doc/doxygen
-		app-text/docbook-xsl-stylesheets )"
+		app-text/docbook-xsl-stylesheets
+		media-gfx/graphviz
+)"
 RDEPEND="${COMMON_DEP}"
 
 PATCHES=(
